class tree and print function created

--- a/Decision Tree Implementation.ipynb
+++ b/Decision Tree Implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[150 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "{'a', 'b', 'c', 'd'}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,34 +451,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_tree(df, y, unused_features):\n",
-    "    #base case\n",
-    "    # 1. unused is empty\n",
-    "    # 2. y contains only one distinct value\n",
+    "class Tree:\n",
     "    \n",
-    "    list_of_classes=[]\n",
-    "    no_of_rows_of_classes=[]\n",
+    "    def __init__(self):\n",
+    "        self.current_entropy =None \n",
+    "        self.children =[]\n",
+    "        self.target_values=[]\n",
+    "        self.target_values_rows=[]\n",
+    "        self.leaf_node=False\n",
+    "        self.gain_ratio=None\n",
+    "        self.best_feature=None\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_tree(root,level):\n",
+    "     \n",
+    "    print(\"Level\",level)\n",
+    "    \n",
+    "    for i in range(len(root.target_values)):\n",
+    "        print(\"Count of\",root.target_values[i],\"=\",root.target_values_rows[i])\n",
+    "    \n",
+    "    \n",
+    "    print(\"Current Entropy  is =\",root.current_entropy)\n",
+    "    \n",
+    "    \n",
+    "    if(root.leaf_node==True):\n",
+    "        print(\"Reached leaf Node\")\n",
+    "        return \n",
+    "    \n",
+    "    if(root.best_feature==None):\n",
+    "        return \n",
+    "    \n",
+    "    print(\"Splitting on feature\",root.best_feature,\"with gain ratio\",root.gain_ratio)\n",
+    "    \n",
+    "    for child in root.children:\n",
+    "        \n",
+    "        print()\n",
+    "        print_tree(child,level+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_tree(df, y, unused_features,root):\n",
+    "    \n",
     "    total_rows=y.shape[0]\n",
     "    current_entropy=calculate_entropy(y)\n",
     "    \n",
     "    \n",
     "    for Class in set(y[0]):\n",
     "        \n",
-    "        no_of_rows=(y[0]==Class).sum()\n",
+    "        totals_rows_of_Class=(y[0]==Class).sum()\n",
     "        \n",
-    "        print(\"Count of\",Class,\"=\",no_of_rows)\n",
-    "        \n",
-    "        list_of_classes.append( Class )\n",
-    "        no_of_rows_of_classes.append( no_of_rows )\n",
+    "        root.target_values.append( Class )\n",
+    "        root.target_values_rows.append( totals_rows_of_Class)\n",
     "    \n",
-    "    print(\"Current Entropy is =\",current_entropy)\n",
-    "    \n",
-    "    if(len(list_of_classes)==1):\n",
-    "        print(\"Reached Lead Node\")\n",
+    "    root.current_entropy=current_entropy\n",
+    "   \n",
+    "  \n",
+    "    if(len(root.target_values_rows)==1):\n",
+    "        root.leaf_node=True\n",
     "        return\n",
     "    \n",
     "    if(len(unused_features)==0):\n",
@@ -491,150 +536,144 @@
     "    for f in unused_features:\n",
     "        \n",
     "        possible_values = set(df[f])\n",
-    "        split_index_at_f=0\n",
-    "        total_entropy_at_f=0\n",
+    "        \n",
+    "        split_index=0\n",
+    "        entropy=0\n",
     "        \n",
     "        for value in possible_values:\n",
     "            \n",
-    "            rows=df[f]==value\n",
-    "            entropy_of_f_value=calculate_entropy(y[rows])\n",
+    "            rows=(df[f]==value)\n",
+    "            entropy_after_split=calculate_entropy(y[rows])\n",
+    "            \n",
     "            probability=rows.sum()/total_rows\n",
     "            \n",
     "            \n",
-    "            total_entropy_at_f+=probability*entropy_of_f_value\n",
-    "            split_index_at_f+=-probability*log2(probability)\n",
+    "            entropy+=probability*entropy_after_split\n",
+    "            split_index+=-probability*log2(probability)\n",
     "        \n",
-    "        gain_ratio_at_f=(current_entropy-total_entropy_at_f)/split_index_at_f\n",
+    "        gain_ratio=( current_entropy-entropy )/split_index\n",
     "        \n",
-    "        if(gain_ratio_at_f>best_gain_ratio):\n",
-    "            best_gain_ratio=gain_ratio_at_f\n",
+    "        \n",
+    "        if(gain_ratio>best_gain_ratio):\n",
+    "            \n",
+    "            best_gain_ratio=gain_ratio\n",
     "            best_feature=f\n",
-    "    \n",
-    "        # loop over possible values : val\n",
-    "        # find subset of df & y with f == val\n",
-    "        # find number of mistakes in this subset \n",
-    "        # if we predict the most common y as the output\n",
-    "        # find sum of all these mistakes\n",
-    "        # update best feature so that that particular feature\n",
-    "        # makes least number of mistakes\n",
-    "    \n",
-    "    # here you should know the best feature\n",
-    "    # print it out\n",
     "    \n",
     "    if(best_feature==\"\"):\n",
     "        return\n",
     "    \n",
-    "    print(\"Best Feature \", best_feature,\"with split ratio\",best_gain_ratio)\n",
+    "    root.gain_ratio=best_gain_ratio\n",
+    "    root.best_feature=best_feature\n",
     "    \n",
     "    new_unused_features=list(unused_features)\n",
     "    new_unused_features.remove(best_feature)\n",
     "    \n",
     "    for value in sorted(set(df[best_feature])):\n",
-    "        row_of_value=df[best_feature]==value\n",
-    "        print()\n",
-    "        build_tree(df[row_of_value], y[row_of_value], new_unused_features)\n",
     "        \n",
-    "    \n",
-    "    # remove best feature from unused features\n",
-    "    # loop over possible values of best feature\n",
-    "    # call build tree recursively"
+    "        child=Tree()\n",
+    "        root.children.append(child)\n",
+    "        build_tree(df[df[best_feature]==value],y[df[best_feature]==value],new_unused_features,child)\n",
+    "        \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Level 0\n",
       "Count of 0 = 50\n",
       "Count of 1 = 50\n",
       "Count of 2 = 50\n",
-      "Current Entropy is = 1.584962500721156\n",
-      "Best Feature  pw_labeled with split ratio 0.6996382036222091\n",
-      "['a', 'b', 'c', 'd']\n",
+      "Current Entropy  is = 1.584962500721156\n",
+      "Splitting on feature pw_labeled with gain ratio 0.6996382036222091\n",
       "\n",
+      "Level 1\n",
       "Count of 0 = 50\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 1\n",
       "Count of 1 = 10\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 1\n",
       "Count of 1 = 40\n",
       "Count of 2 = 16\n",
-      "Current Entropy is = 0.863120568566631\n",
-      "Best Feature  pl_labeled with split ratio 0.4334099495621067\n",
-      "['b', 'c', 'd']\n",
+      "Current Entropy  is = 0.863120568566631\n",
+      "Splitting on feature pl_labeled with gain ratio 0.4334099495621067\n",
       "\n",
+      "Level 2\n",
       "Count of 1 = 1\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 2\n",
       "Count of 1 = 39\n",
       "Count of 2 = 8\n",
-      "Current Entropy is = 0.6581912658132185\n",
-      "Best Feature  sl_labeled with split ratio 0.12674503775809332\n",
-      "['a', 'b', 'c', 'd']\n",
+      "Current Entropy  is = 0.6581912658132185\n",
+      "Splitting on feature sl_labeled with gain ratio 0.12674503775809332\n",
       "\n",
+      "Level 3\n",
       "Count of 2 = 1\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 3\n",
       "Count of 1 = 14\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 3\n",
       "Count of 1 = 23\n",
       "Count of 2 = 7\n",
-      "Current Entropy is = 0.783776947484701\n",
-      "Best Feature  sw_labeled with split ratio 0.07092036405148876\n",
-      "['a', 'b', 'c']\n",
+      "Current Entropy  is = 0.783776947484701\n",
+      "Splitting on feature sw_labeled with gain ratio 0.07092036405148876\n",
       "\n",
+      "Level 4\n",
       "Count of 1 = 3\n",
       "Count of 2 = 1\n",
-      "Current Entropy is = 0.8112781244591328\n",
+      "Current Entropy  is = 0.8112781244591328\n",
       "\n",
+      "Level 4\n",
       "Count of 1 = 14\n",
       "Count of 2 = 6\n",
-      "Current Entropy is = 0.8812908992306927\n",
+      "Current Entropy  is = 0.8812908992306927\n",
       "\n",
+      "Level 4\n",
       "Count of 1 = 6\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 3\n",
       "Count of 1 = 2\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 2\n",
       "Count of 2 = 8\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n",
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n",
       "\n",
+      "Level 1\n",
       "Count of 2 = 34\n",
-      "Current Entropy is = 0.0\n",
-      "Reached Lead Node\n"
+      "Current Entropy  is = 0.0\n",
+      "Reached leaf Node\n"
      ]
     }
    ],
    "source": [
     "y = pd.DataFrame(iris.target)\n",
     "unused_features =list(set(df.columns))\n",
-    "build_tree(df, y, unused_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y=pd.DataFrame([1,1,1,0])\n",
-    "X=pd.DataFrame([[1,1],[0,1],[1,0],[0,0]])\n",
-    "build_tree(X, Y, [0,1])"
+    "root=Tree()\n",
+    "build_tree(df, y, unused_features,root)\n",
+    "print_tree(root,0)"
    ]
   },
   {
