added entropy function

--- a/DecisionTreeImplementation.ipynb
+++ b/DecisionTreeImplementation.ipynb
@@ -429,44 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_entropy(Y):\n",
     "    \n",
-    "    Classes=set(Y)\n",
+    "    Classes=set(Y[0])\n",
     "    entropy=0\n",
+    "    total_rows=len(Y)\n",
     "    \n",
-    "    for cl in classes:\n",
+    "    for cl in Classes:\n",
     "        \n",
-    "        probability_of_cl=Y\n",
-    "        "
+    "        rows_of_cl=(Y[0]==cl).sum()\n",
+    "        probability=rows_of_cl/total_rows\n",
+    "        \n",
+    "        entropy+=-(probability*log2(probability))\n",
+    "    \n",
+    "    return entropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0, 1, 2}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y[0][y[0]==0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,6 +459,9 @@
     "    #base case\n",
     "    # 1. unused is empty\n",
     "    # 2. y contains only one distinct value\n",
+    "    \n",
+    "    for cl in set(y[0]):\n",
+    "        print(\"Count of\",cl,\"=\",)\n",
     "    \n",
     "    best_feature = \"\"\n",
     "    for f in unused_features:\n",
