--- a/Decision Tree Implementation.ipynb
+++ b/Decision Tree Implementation.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modules that are required in this notebook\n",
+    "\n",
     "from sklearn import datasets\n",
     "import pandas as pd\n",
     "from math import log2"
@@ -13,16 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading iris dataset\n",
     "iris = datasets.load_iris()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +246,7 @@
        "[150 rows x 8 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +280,7 @@
        "{'a', 'b', 'c', 'd'}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +421,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,10 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function -: calculates entropy of the data \n",
+    "\n",
     "def calculate_entropy(Y):\n",
     "    \n",
     "    Classes=set(Y[0])\n",
@@ -451,10 +456,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tree class-:\n",
+    "#   current_entropy - stores the current entropy of Node          \n",
+    "#   children - stores children of the Node\n",
+    "#   target_values- stores a list of target classes\n",
+    "#   target_values_rows - stores number of rows of target classes\n",
+    "#   leaf_node - stores true if node is leaf node\n",
+    "#   gain_ratio - stores gain ratio of feature at which we are splitting\n",
+    "#   best_feature - stores feature at which dataset is splitting\n",
+    "\n",
     "class Tree:\n",
     "    \n",
     "    def __init__(self):\n",
@@ -464,35 +478,47 @@
     "        self.target_values_rows=[]\n",
     "        self.leaf_node=False\n",
     "        self.gain_ratio=None\n",
-    "        self.best_feature=None\n",
-    "    "
+    "        self.best_feature=None    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_tree(root,level):\n",
-    "     \n",
+    "    \n",
+    "    # the level of node\n",
+    "    \n",
     "    print(\"Level\",level)\n",
+    "    \n",
+    "    # printing count of target classes\n",
     "    \n",
     "    for i in range(len(root.target_values)):\n",
     "        print(\"Count of\",root.target_values[i],\"=\",root.target_values_rows[i])\n",
     "    \n",
     "    \n",
+    "    # printing current entropy of the node\n",
+    "    \n",
     "    print(\"Current Entropy  is =\",root.current_entropy)\n",
     "    \n",
+    "    # checking if node is a leaf node\n",
     "    \n",
     "    if(root.leaf_node==True):\n",
     "        print(\"Reached leaf Node\")\n",
     "        return \n",
+    "\n",
+    "    # checking if best features exist to split upon\n",
     "    \n",
     "    if(root.best_feature==None):\n",
     "        return \n",
     "    \n",
+    "    # printing gain ratio of the feature at which we are splitting\n",
+    "    \n",
     "    print(\"Splitting on feature\",root.best_feature,\"with gain ratio\",root.gain_ratio)\n",
+    "    \n",
+    "    # recursively calling children of the node\n",
     "    \n",
     "    for child in root.children:\n",
     "        \n",
@@ -502,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +537,7 @@
     "    total_rows=y.shape[0]\n",
     "    current_entropy=calculate_entropy(y)\n",
     "    \n",
+    "    # storing count of target classes of node\n",
     "    \n",
     "    for Class in set(y[0]):\n",
     "        \n",
@@ -519,12 +546,17 @@
     "        root.target_values.append( Class )\n",
     "        root.target_values_rows.append( totals_rows_of_Class)\n",
     "    \n",
+    "    # storing current entropy of the node\n",
+    "    \n",
     "    root.current_entropy=current_entropy\n",
     "   \n",
+    "    # Case : if node is a leaf node\n",
     "  \n",
     "    if(len(root.target_values_rows)==1):\n",
     "        root.leaf_node=True\n",
     "        return\n",
+    "    \n",
+    "    # Case : if no features are available to split upon\n",
     "    \n",
     "    if(len(unused_features)==0):\n",
     "        return \n",
@@ -533,12 +565,17 @@
     "    best_feature =\"\"\n",
     "    best_gain_ratio=0\n",
     "    \n",
+    "    # finding best feature to split upon\n",
+    "    # splitting is base on gain ratio of the feature\n",
+    "    \n",
     "    for f in unused_features:\n",
     "        \n",
     "        possible_values = set(df[f])\n",
     "        \n",
     "        split_index=0\n",
     "        entropy=0\n",
+    "        \n",
+    "        # find gain ratio of feature\n",
     "        \n",
     "        for value in possible_values:\n",
     "            \n",
@@ -553,20 +590,27 @@
     "        \n",
     "        gain_ratio=( current_entropy-entropy )/split_index\n",
     "        \n",
+    "        # comparing gain_ratio with best_split_ratio\n",
     "        \n",
     "        if(gain_ratio>best_gain_ratio):\n",
     "            \n",
     "            best_gain_ratio=gain_ratio\n",
     "            best_feature=f\n",
     "    \n",
+    "    #Case -: if no feature is found to split upon\n",
+    "    \n",
     "    if(best_feature==\"\"):\n",
     "        return\n",
+    "    \n",
+    "    # storing best_gain_ratio and best_feature of node\n",
     "    \n",
     "    root.gain_ratio=best_gain_ratio\n",
     "    root.best_feature=best_feature\n",
     "    \n",
     "    new_unused_features=list(unused_features)\n",
     "    new_unused_features.remove(best_feature)\n",
+    "    \n",
+    "    # recursively splitting the dataset on best_feature\n",
     "    \n",
     "    for value in sorted(set(df[best_feature])):\n",
     "        \n",
@@ -579,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +635,7 @@
       "Count of 1 = 50\n",
       "Count of 2 = 50\n",
       "Current Entropy  is = 1.584962500721156\n",
-      "Splitting on feature pw_labeled with gain ratio 0.6996382036222091\n",
+      "Splitting on feature pw_labeled with gain ratio 0.699638203622209\n",
       "\n",
       "Level 1\n",
       "Count of 0 = 50\n",
@@ -671,17 +715,16 @@
    "source": [
     "y = pd.DataFrame(iris.target)\n",
     "unused_features =list(set(df.columns))\n",
+    "\n",
+    "# creating root node of tree\n",
     "root=Tree()\n",
+    "\n",
+    "# building the Tree\n",
     "build_tree(df, y, unused_features,root)\n",
+    "\n",
+    "# printing the tree\n",
     "print_tree(root,0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
